fix ex2: fix link_test, mock.anything, add intergration test for GenPass, add GetURL endpoint
